# hybrid_multi_sensor_fusion_for_360_object_detection_and_localization

./: .gitmodules  CMakeLists.txt  README.md  package.xml  setup.cfg
launch/: 360_object_detection_and_localization.launch.py
